--- a/car_project/templates/list_cars_for_rent.html
+++ b/car_project/templates/list_cars_for_rent.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +29,7 @@
             height: 200px;
             border-radius: 5px;
         }
-        /* Filter form styling */
+    
         form {
             margin: 20px 0;
         }
@@ -108,7 +109,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars for Rent</title>
     <style>
-        /* Basic styling for the table */
+        
         table {
             width: 100%;
             border-collapse: collapse;
