--- a/car_project/templates/user_registration.html
+++ b/car_project/templates/user_registration.html
@@ -1,11 +1,19 @@
 <!-- USER REGISTRATION -->
 
-
+{% load static %}
 <!DOCTYPE html>
 <head>
     <title>User registeration</title>
 </head>
+<link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
 <body>
+  <nav class="navbar sticky-top bg-body-tertiary">
+    <div class="navbar-container">
+        <a href="{% url 'Login' %}" class="navbar-link">Login</a>
+    </div>
+</nav>
+<div class="main">
     <div class="registration" style="text-align: center;">
         <div><h3>USER REGISTRATION</h3></div>
         <form method="post" action="{% url 'User_registration' %}" enctype="multipart/form-data">
@@ -46,11 +54,12 @@
             <input type="password" class="form-control" name="Confirm_password" placeholder="Confirm your Password" aria-label="password2" aria-describedby="basic-addon1"placeholder="**********" required="" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
           </div><br>
           <div class="mb-4" style="text-align: center;">
+            <div class="add-car-button-container">
             <button type="submit" class="btn btn-primary btn-lg">REGISTER</button></div>
             <div style="width: 40%;margin: auto; text-align: center; font-size: large; padding: 10px;"> {% if x %}
               <p class="text-danger">{{x}}</p>
               {% endif %}
-            </div>
+            </div></div>
         </div>
         
       </form>
@@ -58,7 +67,7 @@
             <p style="color: red;">{{ message }}</p>  
         {% endif %}
       </div>
-
+    </div>
 
 </body>
 </html>
