--- a/car_project/templates/User_home.html
+++ b/car_project/templates/User_home.html
@@ -1,46 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
-    <style>
-        .card-container {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .card {
-            background-color: white;
-            border: 1px solid black;
-            border-radius: 5px;
-            padding: 20px;
-            width: 200px;
-            cursor: pointer; /* Change cursor to pointer for clickable cards */
-        }
-        /* Popup style */
-        .popup {
-            display: none; /* Hidden by default */
-            position: fixed;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            border: 1px solid black;
-            padding: 20px;
-            z-index: 1000; /* On top of everything */
-        }
-        .overlay {
-            display: none; /* Hidden by default */
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-            z-index: 500; /* Below the popup */
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
     <script>
         function promptLogin() {
             document.getElementById('overlay').style.display = 'block';
@@ -53,12 +18,14 @@
         }
     </script>
 </head>
-<body style="text-align: center;">
-    <div class="navbar">
-        
-            <a href="{% url 'Login' %}" style="color: green; float: right;">Login</a>
-        
-    </div>
+<body>
+    <nav class="navbar sticky-top bg-body-tertiary">
+        <div class="navbar-container">
+            <a href="{% url 'Login' %}" class="navbar-link">Login</a>
+        </div>
+    </nav>
+   <div class="main">
+    <div class="content">
     <h1>Welcome to the Home Page</h1>
     <div class="card-container">
         <a href="{% url 'Login' %}?next=list_cars_for_sale"><div class="card">
@@ -71,14 +38,15 @@
         
     </div>
 
-    <!-- Overlay for popup -->
+</div>
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
     
-    <!-- Popup for login prompt -->
+
     <div id="loginPopup" class="popup">
         <h3>Please Log In</h3>
         <p>You need to log in to access this feature.</p>
         <button onclick="closePopup()">Close</button>
     </div>
+</div>
 </body>
 </html>
