--- a/car_project/templates/list_cars_for_sale.html
+++ b/car_project/templates/list_cars_for_sale.html
@@ -1,100 +1,65 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars Available for Sale</title>
-    <style>
-        body {
-            text-align: center;
-        }
-        .card-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .card {
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 10px;
-            width: 200px;
-            text-align: left;
-            background-color: white;
-        }
-        .card img {
-            width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        /* Filter form styling */
-        form {
-            margin: 20px 0;
-        }
-        select, input {
-            margin: 5px;
-            padding: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
 </head>
 <body>
     
-    <nav>
-        <div class="navbar">
-            {% if user_profile %}
-                <div style="float: right;">
-                    <a href="{% url 'view_profile' %}"><h3 style="color: blueviolet;">Username: {{ user_profile.Name }}</h3></a>
-                    <a href="{% url 'logout' %}" style="color: red; float: right;">Logout</a>
-                </div>
-            {% endif %}
-        </div>
-
-        <form method="GET" action="{% url 'list_cars_for_sale' %}">
-            <input type="text" name="search" placeholder="Search by Car Name" value="{{ request.GET.search }}">
+    <nav class="navbar sticky-top bg-body-tertiary ">
+        <div class="navbar-container">
+            <form method="GET" action="{% url 'list_cars_for_sale' %}" class="search-form">
+                <input type="text" name="search" placeholder="Search by Car Name" value="{{ request.GET.search }}">
+                <select name="brand">
+                    <option value="">All Brands</option>
+                    {% for brand in brands %}
+                        <option value="{{ brand.name }}" {% if request.GET.brand == brand.name %}selected{% endif %}>{{ brand.name }}</option>
+                    {% endfor %}
+                </select>
+                <select name="year">
+                    <option value="">All Years</option>
+                    <option value="below_3_years" {% if request.GET.year == 'below_3_years' %}selected{% endif %}>Below 3 Years</option>
+                    <option value="3_to_5_years" {% if request.GET.year == '3_to_5_years' %}selected{% endif %}>3-5 Years</option>
+                    <option value="5_to_10_years" {% if request.GET.year == '5_to_10_years' %}selected{% endif %}>5-10 Years</option>
+                    <option value="above_10_years" {% if request.GET.year == 'above_10_years' %}selected{% endif %}>Above 10 Years</option>
+                </select>
+                <select name="km">
+                    <option value="">All KM</option>
+                    <option value="below_10k" {% if request.GET.km == 'below_10k' %}selected{% endif %}>Below 10k</option>
+                    <option value="10k_to_20k" {% if request.GET.km == '10k_to_20k' %}selected{% endif %}>10k-20k</option>
+                    <option value="20k_to_40k" {% if request.GET.km == '20k_to_40k' %}selected{% endif %}>20k-40k</option>
+                    <option value="above_40k" {% if request.GET.km == 'above_40k' %}selected{% endif %}>Above 40k</option>
+                </select>
+                <select name="oil_type">
+                    <option value="">All Oil Types</option>
+                    {% for oil_type in oil_types %}
+                        <option value="{{ oil_type.oil_type }}" {% if request.GET.oil_type == oil_type.oil_type %}selected{% endif %}>{{ oil_type.oil_type }}</option>
+                    {% endfor %}
+                </select>
+                <select name="price">
+                    <option value="">All Prices</option>
+                    <option value="below_50k" {% if request.GET.price == 'below_50k' %}selected{% endif %}>Below 50k</option>
+                    <option value="1L_to_3L" {% if request.GET.price == '1L_to_3L' %}selected{% endif %}>1L-3L</option>
+                    <option value="3L_to_5L" {% if request.GET.price == '3L_to_5L' %}selected{% endif %}>3L-5L</option>
+                    <option value="5L_to_10L" {% if request.GET.price == '5L_to_10L' %}selected{% endif %}>5L-10L</option>
+                    <option value="above_10L" {% if request.GET.price == 'above_10L' %}selected{% endif %}>Above 10L</option>
+                </select>
+                <button class="filter"type="submit">Filter</button>
+            </form>
             
-            <select name="brand">
-                <option value="">All Brands</option>
-                {% for brand in brands %}
-                    <option value="{{ brand.name }}" {% if request.GET.brand == brand.name %}selected{% endif %}>{{ brand.name }}</option>
-                {% endfor %}
-            </select>
-            <select name="year">
-                <option value="">All Years</option>
-                <option value="below_3_years" {% if request.GET.year == 'below_3_years' %}selected{% endif %}>Below 3 Years</option>
-                <option value="3_to_5_years" {% if request.GET.year == '3_to_5_years' %}selected{% endif %}>3-5 Years</option>
-                <option value="5_to_10_years" {% if request.GET.year == '5_to_10_years' %}selected{% endif %}>5-10 Years</option>
-                <option value="above_10_years" {% if request.GET.year == 'above_10_years' %}selected{% endif %}>Above 10 Years</option>
-            </select>
-        
-            <select name="km">
-                <option value="">All KM</option>
-                <option value="below_10k" {% if request.GET.km == 'below_10k' %}selected{% endif %}>Below 10k</option>
-                <option value="10k_to_20k" {% if request.GET.km == '10k_to_20k' %}selected{% endif %}>10k-20k</option>
-                <option value="20k_to_40k" {% if request.GET.km == '20k_to_40k' %}selected{% endif %}>20k-40k</option>
-                <option value="above_40k" {% if request.GET.km == 'above_40k' %}selected{% endif %}>Above 40k</option>
-            </select>
-        
-            <select name="oil_type">
-                <option value="">All Oil Types</option>
-                {% for oil_type in oil_types %}
-                    <option value="{{ oil_type.oil_type }}" {% if request.GET.oil_type == oil_type.oil_type %}selected{% endif %}>{{ oil_type.oil_type }}</option>
-                {% endfor %}
-            </select>
-        
-            <select name="price">
-                <option value="">All Prices</option>
-                <option value="below_50k" {% if request.GET.price == 'below_50k' %}selected{% endif %}>Below 50k</option>
-                <option value="1L_to_3L" {% if request.GET.price == '1L_to_3L' %}selected{% endif %}>1L-3L</option>
-                <option value="3L_to_5L" {% if request.GET.price == '3L_to_5L' %}selected{% endif %}>3L-5L</option>
-                <option value="5L_to_10L" {% if request.GET.price == '5L_to_10L' %}selected{% endif %}>5L-10L</option>
-                <option value="above_10L" {% if request.GET.price == 'above_10L' %}selected{% endif %}>Above 10L</option>
-            </select>
-        
-            <button type="submit">Filter</button>
-        </form>
+            {% if user_profile %}
+                <a class="navbar-link" href="{% url 'view_profile' %}"><h3>Username: {{ user_profile.Name }}</h3></a>
+            {% endif %}
+            
+            <a class="navbar-link" href="{% url 'logout' %}">Logout</a>
+        </div>
     </nav>
-
+    
+    <div class="parent">
     <h1>Cars Available for Sale</h1>
 
     <div class="card-container">
@@ -115,9 +80,12 @@
             <p>No cars available for sale at the moment.</p>
         {% endif %}
     </div><br><br>
+    <div class="add-car-button-container">
     <a href="{% url 'add_car_for_sale' %}" target="_blank">
         <button>Add car for sale</button>
     </a>
+</div>
+</div>
 </body>
 </html>
  
@@ -130,7 +98,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars for Sale</title>
     <style>
-        /* Basic styling for the table */
+        
         table {
             width: 100%;
             border-collapse: collapse;
