--- a/car_project/templates/my_profile.html
+++ b/car_project/templates/my_profile.html
@@ -1,52 +1,24 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Profile</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        .profile-container {
-            margin-top: 50px;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #f9f9f9;
-            display: inline-block;
-        }
-        h1 {
-            color: blueviolet;
-        }
-        .card-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .card {
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            padding: 10px;
-            width: 200px;
-            text-align: left;
-            background-color: white;
-        }
-        .img {
-            width: 100%;
-            height: 250px;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
 </head>
 <body>
+    <nav class="navbar sticky-top bg-body-tertiary">
+        <div class="navbar-container">
+            <a href="{% url 'list_cars_for_sale' %}" class="navbar-link">Back to car list</a>
+        </div>
+    </nav>
+    <div class="details">
     <div class="profile-container">
         <h1>User Profile</h1>
         {% if user_profile %}
-            <img src="{{ user_profile.profile_picture.url }}" alt="Profile Picture" style="width:150px; height:auto; border-radius: 50%;">
+            <img src="{{ user_profile.profile_picture.url }}" alt="Profile Picture" style="width:170px; height:150px; border-radius: 50%;">
             <p><strong>Name:</strong> {{ user_profile.Name }}</p>
             <p><strong>Email:</strong> {{ user_profile.Email }}</p>
             <p><strong>Phone:</strong> {{ user_profile.Phone }}</p>
@@ -56,7 +28,8 @@
             <p>No profile information available.</p>
         {% endif %}
     </div>
-
+</div>
+<div class="content">
     <div class="card-container">
         <a href="{% url 'list_of_my_cars' %}"><div class="card">
              <h3>My Cars for Sale</h3>
@@ -65,7 +38,7 @@
              <h3>My Cars for Rent</h3>
          </div></a>
      </div>
-        
+    </div> 
     </div>
 </body>
 </html>
